- Enhancement: further optimization on queries - Enhancement: less error prone while running JavaScript - Enhancement: GAPI errors handling improvement - Enhancement: added GADWP_IP_VERSION constant to force a particular Internet Protocol version when needed - Enhancement: run the clean-up method only in settings screen - Enhancement: added tabs to Tracking Code page - Enhancement: added a new menu item for errors and debugging - Enhancement: error alerts for Error & Debug sub-menu - Enhancement: disable file cache functionality in GAPI library - Enhancement: if cURL is not available fall-back to HTTP streams; cURL is no longer a requirement - Enhancement: wp_get_sites limit can now be adjusted through gadwp_sites_limit filter
git-svn-id: https://plugins.svn.wordpress.org/google-analytics-dashboard-for-wp@1080062 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/trunk/admin/css/ga_dash.css
+++ b/trunk/admin/css/ga_dash.css
@@ -1,3 +1,9 @@
+/* Tab navigation */
+
+#gadwp-events, #gadwp-custom, #gadwp-advanced, #gadwp-exclude, #gadwp-config{
+	display:none;
+}
+
 /* Options pages */
 table.options {
 	padding-left: 10px;
@@ -18,7 +24,7 @@ td.title-select {
 }
 
 td.debugging {
-	width: 150px;
+	width: 300px;
 }
 
 td.info {
@@ -45,10 +51,6 @@ td.title label {
 }
 
 pre.gadash {
-}
-
-.show_hide, .log_data {
-	display: none;
 }
 
 pre.log_data {
